# neurorelato-poc

./: .dockerignore  .gitignore  Dockerfile  NOTAS_AVALIADOR.md  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile.dev  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2e4501708ffd_add_text_redacted.py  5be2c3ab27d6_init.py
backend/app/: main.py
backend/app/api/v1/: routes.py  schemas.py
backend/app/core/: config.py  errors.py  logging.py  metrics.py  security.py
backend/app/db/: deps.py  models.py  session.py
backend/app/nlp/: anonymize.py  embeddings.py  engine.py  ontology.py  summary.py  types.py
backend/tests/: __init__.py  conftest.py  test_anonymize.py  test_api.py  test_basic_auth.py  test_config.py  test_db_session.py  test_e2e_scenarios.py  test_embeddings.py  test_golden_dataset_sanity.py  test_logging_privacy.py  test_metrics.py  test_nlp_engine.py  test_ontology.py  test_privacy_persistence.py  test_privacy_validation_errors.py  test_summary.py
backend/tests/fixtures/: narratives.py
backend/tools/: __init__.py  benchmark.py  golden_dataset.py
docs/plans/: 2026-02-12-frontend-clinical-redesign-plan.md  2026-02-12-frontend-clinical-redesign.md
frontend/: Dockerfile.dev  README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  theme.ts
frontend/src/api/: client.ts  (+1 more)
observability/heroku-grafana/: Dockerfile  entrypoint.sh
scripts/: deploy-observability.sh  observability-smoke.sh
(+62 files in other folders)
