[project]
name = "plataformaneuro-backend"
version = "0.1.0"
description = "PoC - backend FastAPI (normalizacao semantica)"
requires-python = ">=3.13"
readme = "README.md"
dependencies = [
  "fastapi>=0.128.0",
  "uvicorn[standard]>=0.40.0",
  "pydantic>=2.12.0",
  "pydantic-settings>=2.12.0",
  "sqlalchemy>=2.0.46",
  "alembic>=1.18.3",
  "psycopg[binary]>=3.3.2",
  "fastembed>=0.7.4",
  "prometheus-client>=0.24.1",
  "prometheus-fastapi-instrumentator>=7.1.0",
]

[dependency-groups]
dev = [
  "pytest>=8.4.1",
  "pytest-cov>=6.3.0",
  "httpx>=0.28.1",
  "ruff>=0.15.0",
  "mypy>=1.17.1",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.lint.per-file-ignores]
"alembic/versions/*.py" = ["E501"]
"tests/fixtures/narratives.py" = ["E501"]

[tool.pytest.ini_options]
addopts = "-q"
filterwarnings = [
  "ignore:SOCKS support in urllib3 requires.*:urllib3.exceptions.DependencyWarning",
  "ignore:The model .* now uses mean pooling instead of CLS embedding.*:UserWarning",
]

[tool.mypy]
python_version = "3.13"
disable_error_code = ["untyped-decorator", "import-untyped"]
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
check_untyped_defs = true
strict = true
